fix the articles sizes to scale down on mobile phone

--- a/src/App.css
+++ b/src/App.css
@@ -170,6 +170,7 @@ header {
 
 @media (max-width: 770px) {
     main {
+        margin: 0;
         .banner {
             margin-bottom: 1rem;
             height: 11.5rem;
@@ -179,8 +180,6 @@ header {
     }
 
     header {
-        margin: 0 14vw;
-
         .header_content {
             margin-top: .4rem;
             align-items: center;
@@ -367,34 +366,33 @@ main {
 
     @media (max-width: 770px) {
         .articles_container {
-            max-width: 100%;
-            gap: .3rem;
-
+            max-width: 90vw;
+            gap: 2vw;
             article {
+                width: 27vw;
+                height: 35vw;
                 margin-bottom: .5rem;
-                border-radius: 15px;
-                width: 7.5rem;
-                height: 10.5rem;
+                border-radius: 3vw;
 
                 video {
                     padding: .5rem 0;
-                    width: 5rem;
-                    height: 5rem;
+                    width: 20vw;
+                    height: 20vw;
                 }
 
                 h2 {
                     margin-top: .2rem;
-                    font-size: .6rem;
+                    font-size: 2vw;
                 }
 
                 p {
-                    font-size: .5rem;
-                    width: 7rem;
+                    font-size: 1.8vw;
+                    width: 100%;
                 }
 
                 a {
                     align-self: flex-end;
-                    margin-right: .5rem;
+                    margin-right: 2vw;
                 }
             }
         }
@@ -793,6 +791,11 @@ main {
         }
     }
 }
+@media (max-width: 770px) {
+    main {
+        margin: 0;
+    }
+}
 
 footer {
     display: flex;
@@ -1073,6 +1076,8 @@ footer {
 
 @media (max-width: 600px) {
     main {
+        margin: 0;
+        /*
         .articles_container {
             padding: 20vw 0;
             article {
@@ -1198,5 +1203,6 @@ footer {
                 }
             }
         }
+        */
     }
 }
